# MLOps_group

./: .gitignore  Dockerfile.streamlit  EDA(do not submit this).ipynb  README.md  pyproject.toml  requirements.txt
checkpoints/: logistic.pkl  svm.pkl
cli/: cli_tool.py
code/: functions.py  main.py
fastapi/: api.py  valide_user_request.py
project_code/: functions.py  main.py  models.py
streamlit/: Dockerfile.streamlit  app.py
tests/: test_functions.py  test_models.py
