[project]
name = "mlops_final_project"
version = "0.1.0"
keywords = ["dsba","mlops","machine learning"]
description = "Final project for dsba course Mlops"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  {name = "Tonghan WEN", email = "tonghan.wen@student-cs.fr"},
  {name = "Wenjing FANG", email = "wenjing.fang@student-cs.fr"},
  {name = "Jeremy Garneau"},
  {name = "Thalia Mongayard"},]


dependencies = [
    "scikit-learn==1.4.1",
    "pandas==2.2.1",
    "joblib==1.3.2",
    "streamlit==1.32.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



## when fastapi and unitest added, will write down other dependencies necessary


## useful url
[project.urls]
HomePage = "https://github.com/wenjing-fang/MLOps_group"
